--- a/miniprogram/pages/succ_index/succ_index.wxml
+++ b/miniprogram/pages/succ_index/succ_index.wxml
@@ -5,10 +5,19 @@
         <image src="cloud://wxyun-7g4bm1vn16ceb7ed.7778-wxyun-7g4bm1vn16ceb7ed-1304852033/icon/加.png"></image>
       </navigator> -->
 </view>
+<view class="newsNticeAdmin">
+<l-grid l-class="grid" show-border="{{true}}" bind:lintap="test">
+    <l-grid-item 
+      wx:for="{{newsNotice}}" wx:key="{{index}}" key="{{index}}" slot="{{index}}">
+        <l-icon name="{{item.iconName}}" l-class='iconfont'/>
+        <view class="text">{{item.title}}</view>
+    </l-grid-item>
+</l-grid>
+</view>
 
-<view class="workbench">
+<!-- <view class="workbench"> -->
     <!-- <text class="title">新闻动态管理</text> -->
-    <view class="list">
+    <!-- <view class="list">
       <view class="items">
         <image src="cloud://wxyun-7g4bm1vn16ceb7ed.7778-wxyun-7g4bm1vn16ceb7ed-1304852033/icon/通知.png" bindtap="junmToNotice"></image>
         <view class="tip">通知管理</view>
@@ -26,6 +35,6 @@
         <view class="tip"></view>
       </view>
     </view>
-  </view>
+  </view> -->
 
   
