--- a/miniprogram/pages/newslist/newslist.wxml
+++ b/miniprogram/pages/newslist/newslist.wxml
@@ -1,35 +1,37 @@
 <!-- 顶部导航栏 -->
 <view class="pubTitle">
       <view class="txt">新闻管理</view>
-      <view class="more" open-type="reLaunch" bindtap="jumpToAdd">
+      <view  class="more" open-type="reLaunch" bindtap="jumpToAdd">
         <image src="cloud://wxyun-7g4bm1vn16ceb7ed.7778-wxyun-7g4bm1vn16ceb7ed-1304852033/icon/加.png"></image>
       </view>
 </view>
 
-<view class="container">
+<!-- <view class="container"> -->
+
   
   <!-- 查询内容 这里面定义实体类里面的字段-->
-  <view class="row">
+  <!-- <view class="row"> -->
     <block wx:for="{{list}}" wx:key="key">
-      <view class="content">
-        <view class="title" >
+      <!-- <view class="content"> -->
+        <l-list class="erow" title="{{item.title}}" desc="{{item.author}}"  url="../editNews/editNews?itemid={{item._id}}" desc="{{item.time}}" tag-position="right" tag-content="编辑" tag-shape="circle" tag-color="#5CACEE" />
+        <view class="line"></view>
+        <!-- <view class="title" >
           标题:{{item.title}}
         </view>
         <view >
           作者:{{item.author}}
-        </view>
+        </view> -->
         
-
-        <view class="opration">
+        <!-- <view class="opration">
           <image src="cloud://wxyun-7g4bm1vn16ceb7ed.7778-wxyun-7g4bm1vn16ceb7ed-1304852033/icon/删 除 .png" class="searchicon" data-itemid='{{item._id}}' bindtap="onDel" />
            
           <navigator url="../editNotice/editNotice?itemid={{item._id}}"  class="edit">
             <image src="cloud://wxyun-7g4bm1vn16ceb7ed.7778-wxyun-7g4bm1vn16ceb7ed-1304852033/icon/编辑.png" class="searchicon" data-itemid='{{item._id}}' />
-            
+           
           </navigator>
-        </view>
-      </view>
+        </view> -->
+      <!-- </view> -->
     </block>
-    <view wx:if='{{noData}}'class="noData">没有更多了~</view>
-  </view>
-</view>
+    
+  <!-- </view> -->
+<!-- </view> -->
